fix small search layout broken by aos.
[Detail]

The dropdown inside the banner searchbar will no longer
be on the top after aos animation. The menu will be blocked
by the swiper tabs below.

[Resolve]

Remove aos animation temporarily.
Also fix small layout overflow in date field.

--- a/src/assets/style/components/_text.scss
+++ b/src/assets/style/components/_text.scss
@@ -1,14 +1,4 @@
 // ---- text styles
-.notation {
-    font-size: 12px;
-    vertical-align: top;
-}
-
-.notation-lg {
-    font-size: 16px;
-    vertical-align: top;
-}
-
 .fz-grade {
     font-size: 18px;
 }
