--- a/src/assets/style/configs/bootstrap/_variables.scss
+++ b/src/assets/style/configs/bootstrap/_variables.scss
@@ -37,6 +37,8 @@ $border-radius-lg:              8px;
 // Navbars
 $navbar-dark-brand-color:       #fff;
 $navbar-dark-color:             #fff;
+$navbar-light-color:            black;
+$navbar-light-hover-color:      $primary;
 
 // Animation
 $transition-collapse:         height .4s ease !default
